<resources>
    <string name="app_name">Edit.</string>
    <string name="tv_bnv_home">홈</string>
    <string name="tv_bnv_ranking">랭킹</string>
    <string name="tv_bnv_myedit">나의 에딧</string>
    <string name="tv_loading">LOADING...</string>
    <string name="tv_splash">자소서 공유 플랫폼</string>
    <string name="fab_description_mentee">자소서 작성</string>
    <string name="fab_description_mentor">자소서 코멘트 작성</string>
    <string name="snackbar_description_mentor">나의 에딧>멘토 인증하기를 진행해주세요. :)</string>
    <string name="tv_title_today_sentence">오늘의 문장</string>
    <string name="tv_card_writer">유진</string>
    <string name="tv_card_position">멘티님</string>
    <string name="tv_card_position_mentor">멘토님</string>
    <string name="tv_card_zero_title">문장이 아직 등록되지 않았어요.</string>
    <string name="tv_card_zero_content">오늘 첫 문장의 주인공이 되어보세요!</string>
    <string name="tv_title_waited_comment">코멘트를 기다리고 있어요!</string>
    <string name="tv_title_completed_adoption">채택이 완료되었어요!</string>
    <string name="tv_title_best_sentence_of_sympathy">많은 분들이 공감하고 있어요!</string>
    <string name="tv_title_open_comment">코멘트 보기</string>
    <string name="tv_title_self_writing">자소서 입력하기</string>
    <string name="tv_sentence_content_example">
        실습은 요양원에서 했는데 현장에서 일을 해보니 생각했던 것보다 사회복지사가 신경써야 할 부분들이 많았지만 어르신들과 보내는 시간이 너무 즐거웠습니다.
    </string>
    <string name="tv_sentence_comment_example">
        해당 실습은 3주간의 기간을 노인 요양원에서 어르신들과 함께하는 시간이었습니다. 이렇게 작성하시는 것이 더 좋을 것 같아요.
    </string>
    <string name="et_sentence_hint">함께 고민하고 싶은 문장이 있나요?</string>
    <string name="tv_occupation_text">희망 직군</string>
    <string name="tv_current_job_text">직군</string>
    <string name="tv_vertical_bar">|</string>
    <string name="tv_occupation_type">디자인</string>
    <string name="tv_colon">:</string>
    <string name="tv_sympathy">공감해요</string>
    <string name="tv_sympathy_count">0</string>
    <string name="snackbar_report">신고가 정상적으로 접수되었습니다. :)</string>
    <string name="snackbar_limit_over">오늘 하루 10개의 문장 작성을 완료하셨습니다! :)</string>
    <string name="snackbar_mentee_only">자소서 입력하기로 이어지며, 멘티만 작성 가능합니다! :)</string>
    <string name="tv_self_writing_spinner_type_title">자소서 종류</string>
    <string name="spinner_hint">선택해주세요.</string>
    <string name="spinner_self_writing_0">지원동기</string>
    <string name="spinner_self_writing_1">성장배경</string>
    <string name="spinner_self_writing_2">성격의 장ㆍ단점</string>
    <string name="spinner_self_writing_3">직무 관련 경험</string>
    <string name="spinner_self_writing_4">문제 해결 경험</string>
    <string name="spinner_self_writing_5">도전ㆍ성취ㆍ실패ㆍ극복 경험</string>
    <string name="spinner_self_writing_6">취미 / 특기</string>
    <string name="spinner_self_writing_7">기타</string>
    <string name="et_self_writing_etc_hint">최대 20자 입력 가능합니다.</string>
    <string name="tv_self_writing_notice_write_first">하루에 등록 가능한 문장은 최대 10개 입니다.</string>
    <string name="tv_self_writing_notice_write_second">10개 이상 입력할 수 있는 서비스를 준비 중이니, 조금만 기다려주세요!</string>
    <string name="tv_to_be_develop">서비스를 준비 중입니다. 조금만 기다려주세요!</string>
    <string name="tv_self_writing_input_title">문장 입력</string>
    <string name="tv_self_writing_input_include_space">공백 포함 :</string>
    <string name="tv_self_writing_input_without_space">공백 제외 :</string>
    <string name="tv_self_writing_input_count">자</string>
    <string name="tv_self_writing_input_hint">문장은 공백 제외 150자 내로 제한됩니다.</string>
    <string name="tv_self_writing_notice_input_first">한 번 등록한 문장은 수정이 어렵습니다. 신중히 확인 후 등록해주세요!</string>
    <string name="tv_self_writing_notice_input_second">문장 삭제는 ‘나의 에딧 &gt; 자소서 목록’에서 가능합니다.</string>
    <string name="btn_self_writing_temp">임시 저장</string>
    <string name="btn_self_writing_submit">등록하기</string>
    <string name="tv_writing_comment_toolbar_title">코멘트 입력하기</string>
    <string name="tv_writing_comment_input_title">멘토 코멘트 입력</string>
    <string name="tv_writing_comment_input_hint">해당 자소서에 대한 의견을 작성해주세요.\n(40자 이상 작성 필수)</string>
    <string name="tv_writing_comment_input_caption_0">코멘트를 40자 이상 입력해주세요.</string>
    <string name="tv_writing_comment_input_caption_1">모든 항목을 평가해주세요.</string>
    <string name="tv_writing_comment_notice_first">한 번 등록한 코멘트는 수정이 어렵습니다. 신중히 확인 후 등록해주세요!</string>
    <string name="tv_writing_comment_notice_second">코멘트 삭제는 ‘나의 에딧 &gt; 작성한 코멘트’에서 가능합니다.</string>
    <string name="tv_open_comment_evaluation_type_0">문장에 대한 전체 평가</string>
    <string name="tv_open_comment_evaluation_type_1">구체성과 논리성</string>
    <string name="tv_open_comment_evaluation_type_2">성실성</string>
    <string name="tv_open_comment_evaluation_type_3">활동성</string>
    <string name="tv_open_comment_evaluation_good">좋음</string>
    <string name="tv_open_comment_evaluation_normal">보통</string>
    <string name="tv_open_comment_evaluation_leak">부족</string>
    <string name="tv_open_comment_zero_title">아직 코멘트가 없습니다.</string>
    <string name="tv_open_comment_zero_content">
        멘토님이 작성해주신 코멘트 한 줄이\n멘티님께는 큰 도움이 됩니다!
    </string>
    <string name="tv_open_comment_completion">문장 완성하기</string>
    <string name="tv_open_comment_thanks">감사합니다!</string>
    <string name="tv_open_comment_adoption">채택하기</string>
    <string name="snackbar_comment_adoption_mentee">코멘트를 채택하셨네요! 이제 문장을 완성해볼까요? :)</string>
    <string name="snackbar_sentence_list_delete_mentee">선택하신 문장이 삭제되었습니다. :)</string>
    <string name="tv_sentence_completion_mentee_written_by_me_title">내가 작성한 문장</string>
    <string name="tv_sentence_completion_mentee_adopt_by_me_title">내가 채택한 코멘트</string>
    <string name="tv_more_comment">+ 코멘트 더보기</string>
    <string name="tv_open_sentence">문장 보기</string>
    <string name="snackbar_comment_list_delete_mentor">선택하신 코멘트가 삭제되었습니다. :)</string>
    <string name="tv_writing_comment_completion">코멘트 이어서 작성하기</string>
    <string name="tv_dialog_self_writing_title">문장 완성을 할 수 없어요!</string>
    <string name="tv_dialog_self_writing_content">코멘트가 아직 없거나, 채택한 코멘트가 없는 경우 문장 완성을 할 수 없어요.</string>
    <string name="tv_dialog_open_comment_title">코멘트를 삭제하시겠어요?</string>
    <string name="tv_dialog_open_comment_content">삭제된 코멘트는 복구할 수 없습니다.\n정말 삭제하시겠어요?</string>
    <string name="tv_dialog_open_sentence_title">문장을 삭제하시겠어요?</string>
    <string name="tv_dialog_open_sentence_content">삭제된 문장은 복구할 수 없습니다.\n정말 삭제하시겠어요?</string>
    <string name="tv_dialog_sentence_report_title">이 글을 신고하시겠어요?</string>
    <string name="tv_dialog_sentence_report_content">
        해당 글이 에딧의 가이드에 어긋나거나\n불쾌감을 줄 경우 신고해주세요.
    </string>
    <string name="tv_dialog_sentence_temp_title">임시 저장하시겠어요?</string>
    <string name="tv_dialog_sentence_temp_content">
        임시 저장 목록에 문장을 저장하고\n나중에 다시 작업할 수 있어요.
    </string>
    <string name="tv_dialog_sentence_submit_title">등록하시겠어요?</string>
    <string name="tv_dialog_sentence_submit_content">
        등록 이후에는 수정이 어렵습니다.\n신중하게 확인 후 등록해주세요!
    </string>
    <string name="tv_dialog_sentence_complete_title">완성하시겠어요?</string>
    <string name="tv_dialog_sentence_complete_content">
        완성 이후에는 수정이 어렵습니다.\n신중하게 확인 후 등록해주세요!
    </string>
    <string name="tv_dialog_withdrawal_title">정보 삭제에 동의하시나요?</string>
    <string name="tv_dialog_withdrawal_content">탈퇴 이후에는 모든 서비스를 사용할 수 없으며, 복구가 불가능합니다.</string>
    <string name="tv_dialog_confirm">확인</string>
    <string name="tv_dialog_delete">삭제</string>
    <string name="tv_dialog_report">신고하기</string>
    <string name="tv_dialog_temp">임시 저장</string>
    <string name="tv_dialog_submit">등록하기</string>
    <string name="tv_dialog_dismiss">취소</string>
    <string name="tv_dialog_agree">동의</string>
    <string name="tv_dialog_select">선택하기</string>
    <string name="tv_dialog_title_find_email">가입하신 메일 계정입니다.</string>
    <string name="tv_dialog_content_find_email">개인정보 보호를 위해 일부는 *로 표기됩니다.</string>
    <string name="tv_dialog_title_find_pw">메일이 전송되었습니다.</string>
    <string name="tv_dialog_wrong_title_find_pw">메일 전송 실패!</string>
    <string name="tv_dialog_content_find_pw">해당 이메일로 임시 비밀번호를 보내드렸습니다.\n확인해주세요!</string>
    <string name="tv_dialog_title_back_press">회원가입을 취소하시나요?</string>
    <string name="tv_dialog_content_back_press">확인을 누르면 입력한 내용이\n모두 저장되지 않습니다!</string>
    <string name="tv_menu_profile">내 정보</string>
    <string name="tv_change_profile">프로필 수정</string>
    <string name="tv_change_profile_resources">캐릭터 및 색상 변경</string>
    <string name="btn_save">저장하기</string>
    <string name="tv_change_password">비밀번호 변경</string>
    <string name="tv_change_password_input_old_title">
        본인 확인을 위해\n비밀번호를 입력해주세요.
    </string>
    <string name="tv_password">비밀번호</string>
    <string name="tv_password_new">새 비밀번호</string>
    <string name="tv_password_reenter">비밀번호 재입력</string>
    <string name="et_password_input_hint">비밀번호를 입력해주세요.</string>
    <string name="et_password_input_reenter_hint">비밀번호를 다시 한 번 입력해주세요.</string>
    <string name="tv_password_input_correct">비밀번호가 일치합니다.</string>
    <string name="tv_password_input_not_correct">입력하신 비밀번호가 일치하지 않습니다.</string>
    <string name="tv_password_input_reg">영문, 숫자를 포함한 8~15자 조합으로 입력해주세요.</string>
    <string name="tv_change_password_input_new_title">
        변경하실 비밀번호를\n입력해주세요.
    </string>
    <string name="tv_change_password_complete_title">
        님,\n변경이 완료되었습니다.
    </string>
    <string name="tv_change_job">직군 변경</string>
    <string name="tv_input_etc">기타 입력</string>
    <string name="tv_change_reason_title">변경 사유</string>
    <string name="tv_change_job_title">변경하실 직군을\n선택해주세요.</string>
    <string name="tv_change_job_etc_hint">직군을 입력해주세요.</string>
    <string name="tv_change_job_etc_caption">영문, 한글만 입력 가능합니다. (숫자, 특수문자 불가)</string>
    <string name="spinner_job_0">개발</string>
    <string name="spinner_job_1">경영</string>
    <string name="spinner_job_2">기획</string>
    <string name="spinner_job_3">디자인</string>
    <string name="spinner_job_4">마케팅 / 홍보</string>
    <string name="spinner_job_5">사무 / 서비스</string>
    <string name="spinner_job_6">생산 / 기술</string>
    <string name="spinner_job_7">영업</string>
    <string name="spinner_job_8">인사 / 교육</string>
    <string name="spinner_job_9">재무 / 회계</string>
    <string name="spinner_job_10">총무</string>
    <string name="spinner_job_11">C/S</string>
    <string name="spinner_job_12">기타 (직접 입력)</string>
    <string name="tv_mentor_change_job_select">직군 선택</string>
    <string name="tv_mentee_change_job_select">희망 직군 선택</string>
    <string name="tv_menu_sympathy_list">공감 목록</string>
    <string name="tv_menu_sentence_list">자소서 목록</string>
    <string name="tv_menu_sentence_complete_list">자소서 완성</string>
    <string name="tv_before">Before</string>
    <string name="tv_after">After</string>
    <string name="tv_menu_temp_list">임시 저장</string>
    <string name="tv_switch_position">멘토/멘티 변경하기</string>
    <string name="tv_switch_position_toolbar">멘토/멘티 변경</string>
    <string name="btn_complete">완성하기</string>
    <string name="tv_switch_position_title">
        님,\n
        정말 역할을 변경하시겠어요?
    </string>
    <string name="tv_switch_position_mentor_content">
        작성하신 코멘트와 보유 코인 등 멘토 활동 내역은\n
        역할 변경 후에 확인이 어렵습니다!\n\n
        멘토로 다시 활동하실 때 확인하실 수 있어요.
    </string>
    <string name="tv_switch_position_mentee_content">
        작성하신 자소서 및 멘티 활동 내역은\n
        역할 변경 후에 확인이 어렵습니다!\n\n
        멘티로 다시 활동하실 때 확인하실 수 있어요.
    </string>
    <string name="tv_switch_position_reason_title">
        님,\n
        역할 변경 사유를 알려주세요!
    </string>
    <string name="spinner_mentee_to_mentor_0">회사 취업</string>
    <string name="spinner_mentee_to_mentor_1">멘토로 다시 활동하기 위해</string>
    <string name="spinner_mentee_to_mentor_2">멘토 활동에 대한 궁금증</string>
    <string name="spinner_mentee_to_mentor_3">멘토의 수익 구조를 위해</string>
    <string name="spinner_mentor_to_mentee_0">퇴사 및 자소서 준비</string>
    <string name="spinner_mentor_to_mentee_1">멘티로 다시 활동하기 위해</string>
    <string name="spinner_mentor_to_mentee_2">멘티 활동에 대한 궁금증</string>
    <string name="spinner_mentor_to_mentee_3">멘토 활동에 대한 부담감</string>
    <string name="tv_switch_position_complete_title">
        님,\n변경 신청이 완료되었습니다.
    </string>
</resources>