<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/size_card_radius_7dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="@dimen/size_280dp"
            android:layout_height="@dimen/size_437dp"
            android:layout_gravity="center">
            <TextView
                android:id="@+id/tv_dialog_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/CustomTextViewMidBlack"
                android:text="@string/tv_mentor_change_job_select"
                android:textSize="@dimen/size_18dp"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"

                android:layout_marginTop="@dimen/size_18dp"
                android:layout_marginStart="@dimen/size_20dp"
                android:layout_marginLeft="@dimen/size_20dp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />
            <View
                android:id="@+id/view_divider_top"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/gray_shadow"
                android:layout_marginTop="@dimen/size_18dp"
                app:layout_constraintTop_toBottomOf="@id/tv_dialog_title" />
            <androidx.core.widget.NestedScrollView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintTop_toBottomOf="@id/view_divider_top"
                app:layout_constraintBottom_toTopOf="@id/view_divider_bottom"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent">
                <RadioGroup
                    android:id="@+id/rg_job"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp">
                    <RadioButton
                        android:id="@+id/rb_job_0"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_0"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_1"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_2"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_3"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_4"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_4"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_5"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_6"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_6"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_7"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_7"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_8"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_8"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_9"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_9"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_10"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_10"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_11"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_11"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                    <RadioButton
                        android:id="@+id/rb_job_12"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/CustomTextViewMidBlack"
                        android:text="@string/spinner_job_12"
                        android:textSize="@dimen/size_15dp"
                        android:paddingStart="@dimen/size_20dp"
                        android:paddingLeft="@dimen/size_20dp" />
                </RadioGroup>
            </androidx.core.widget.NestedScrollView>


            <View
                android:id="@+id/view_divider_bottom"
                android:layout_width="match_parent"
                android:layout_height="@dimen/size_1dp"
                android:background="@color/gray_shadow"
                android:layout_marginBottom="@dimen/size_52dp"
                app:layout_constraintBottom_toBottomOf="parent"/>
            <TextView
                android:id="@+id/tv_confirm"
                android:layout_width="@dimen/size_74dp"
                android:layout_height="@dimen/size_36dp"
                style="@style/CustomTextViewMidBlack"
                android:text="@string/tv_dialog_select"
                android:textSize="@dimen/size_13dp"
                android:textColor="@color/purple_active"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"

                android:layout_marginBottom="@dimen/size_8dp"
                android:layout_marginEnd="@dimen/size_8dp"
                android:layout_marginRight="@dimen/size_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />
            <TextView
                android:id="@+id/tv_dismiss"
                android:layout_width="@dimen/size_74dp"
                android:layout_height="@dimen/size_36dp"
                style="@style/CustomTextViewMidBlack"
                android:text="@string/tv_dialog_dismiss"
                android:textSize="@dimen/size_13dp"
                android:fontFamily="@font/noto_sans_kr_medium"
                android:gravity="center"

                android:layout_marginBottom="@dimen/size_8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@id/tv_confirm" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>