<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="@dimen/size_280dp"
        android:layout_height="@dimen/size_437dp"
        android:orientation="vertical"
        android:layout_gravity="center">

        <TextView
            android:id="@+id/tv_dialog_title_job_group"
            style="@style/CustomTextViewMidBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/size_20dp"
            android:layout_marginLeft="@dimen/size_20dp"
            android:layout_marginTop="@dimen/size_18dp"
            android:fontFamily="@font/noto_sans_kr_medium"
            android:gravity="center"
            android:text="@string/tv_mentor_change_job_select"
            android:textSize="@dimen/size_18dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <View
            android:id="@+id/view_divider_top_job_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:layout_marginTop="@dimen/size_18dp"
            android:background="@color/gray_shadow"
            app:layout_constraintTop_toBottomOf="@id/tv_dialog_title_job_group" />

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            app:layout_constraintBottom_toTopOf="@id/view_divider_bottom_job_group"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view_divider_top_job_group">

            <RadioGroup
                android:id="@+id/rg_dialog_job_group"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingStart="@dimen/size_20dp"
                android:paddingLeft="@dimen/size_20dp">

                <RadioButton
                    android:id="@+id/rb_job_group_0"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_0"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_1"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_1"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_2"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_2"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_3"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_3"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_4"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_4"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_5"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_5"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_6"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_6"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_7"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_7"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_8"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_8"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_9"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_9"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_10"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_10"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_11"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_11"
                    android:textSize="@dimen/size_15dp" />

                <RadioButton
                    android:id="@+id/rb_job_group_12"
                    style="@style/CustomTextViewMidBlack"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingStart="@dimen/size_20dp"
                    android:paddingLeft="@dimen/size_20dp"
                    android:text="@string/spinner_job_12"
                    android:textSize="@dimen/size_15dp" />
            </RadioGroup>
        </androidx.core.widget.NestedScrollView>


        <View
            android:id="@+id/view_divider_bottom_job_group"
            android:layout_width="match_parent"
            android:layout_height="@dimen/size_1dp"
            android:background="@color/gray_shadow"
            app:layout_constraintBottom_toBottomOf="parent" />

<!--        <TextView-->
<!--            android:id="@+id/tv_confirm_job_group"-->
<!--            style="@style/CustomTextViewMidBlack"-->
<!--            android:layout_width="@dimen/size_74dp"-->
<!--            android:layout_height="@dimen/size_36dp"-->
<!--            android:layout_marginEnd="@dimen/size_8dp"-->
<!--            android:layout_marginRight="@dimen/size_8dp"-->
<!--            android:layout_marginBottom="@dimen/size_8dp"-->
<!--            android:fontFamily="@font/noto_sans_kr_medium"-->
<!--            android:gravity="center"-->

<!--            android:text="@string/tv_dialog_select"-->
<!--            android:textColor="@color/purple_active"-->
<!--            android:textSize="@dimen/size_13dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toEndOf="parent" />-->

<!--        <TextView-->
<!--            android:id="@+id/tv_dismiss_job_group"-->
<!--            style="@style/CustomTextViewMidBlack"-->
<!--            android:layout_width="@dimen/size_74dp"-->
<!--            android:layout_height="@dimen/size_36dp"-->
<!--            android:layout_marginBottom="@dimen/size_8dp"-->
<!--            android:fontFamily="@font/noto_sans_kr_medium"-->
<!--            android:gravity="center"-->
<!--            android:text="@string/tv_dialog_dismiss"-->
<!--            android:textSize="@dimen/size_13dp"-->
<!--            app:layout_constraintBottom_toBottomOf="parent"-->
<!--            app:layout_constraintEnd_toStartOf="@id/tv_confirm_job_group" />-->
    </LinearLayout>
</layout>
